--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         async function loadStudentData() {
             try {
                 loading.style.display = 'block';
-                const response = await fetch('https://tim-cn.github.io/chou_ren/DATA/students.data');
+                const response = await fetch('/DATA/students.txt');
                 
                 if (!response.ok) {
                     throw new Error(`HTTP错误! 状态: ${response.status}`);
