--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
 
     <script>
         const xmxs = [
-            '张雨泽','郎悦乔','叶子宸','徐子涵','孟想','许意欣','黄柏然','杨昃霖','刘伊哲','陆希',
+            '朱梓煊','张庭瑞','张雨泽','郎悦乔','叶子宸','徐子涵','孟想','许意欣','常博','黄柏然',
             '顾含萱','沈徐胤辰','汤昊承','胡钧雅','颜子依','曹雨涵','吴冰童','蒋钰宁','厉夏','何雨佳',
-            '詹婕晗','胡芸溪','李一诺','山子越','朱梓煊'，'姜易泽','杨舒予','高嘉乐','郭知音','陈俊熙',
-            '梁彧馨','邢家凯','张舒云','赵雪妍','沈雨轩','金奕辰','卢思越','吴紫萱','周浩洋','常博',
-            '顾启洋','陈艺芯','沈鋆哲','沈子恒','施邵杰','张庭瑞','王君萧','胡嘉祺','许子轩'
+            '詹婕晗','胡芸溪','李一诺','山子越','姜易泽','杨舒予','高嘉乐','郭知音','陈俊熙','杨昃霖',
+            '梁彧馨','邢家凯','张舒云','赵雪妍','沈雨轩','金奕辰','卢思越','陆希','吴紫萱','周浩洋',
+            '顾启洋','陈艺芯','沈鋆哲','沈子恒','施邵杰','王君萧','胡嘉祺','许子轩','刘伊哲'
         ];
         
         const xz = document.getElementById('nameDisplay');
